<resources>
    <string name="app_name">MyDestination</string>
    <string name="title_activity_maps">MyDestination</string>
    <string name="messahe">GPS is disabled in your device. Would you like to enable it?</string>
    <string name="error">Check your internet connection</string>
    <string name="running">to get Update after certian distance we need to run this </string>
    <string name="message">you have almost reached the location</string>
    <string name="header">Locaiton Update</string>
    <string name="GpsButton">Goto Settings Page To Enable GPS</string>
    <string name="button">Cancel</string>
    <string name="internet_connection">"You need a network connection to use this application. Please turn on mobile network or Wi-Fi in Settings.</string>
    <string name="titleMsg">Unable to connect</string>
    <string name="settings">Settings</string>
    <string name="location_fenccing_radius">Location Fence Radius In Meters</string>


    <!--userNamePage -->
    <string name="name">Please enter your Name</string>
    <string name="submit">submit</string>

    <!---MenuItem -->

    <string name="heading">Where do you like to go?</string>
    <string name="sub_heading">Plan your destination and get notify</string>
    <string name="addlocation">Add Destination</string>
    <string name="destinationlist">Destination List</string>
    <string name="currentstatus">Current Status</string>


    <!---coice message text-->
    <string name="voice_entering">You are yet to reach your Destination</string>
    <string name="voice_existing">You are exiting </string>
</resources>
